--- a/hive/h-manifest.conf
+++ b/hive/h-manifest.conf
@@ -7,11 +7,11 @@
 CUSTOM_NAME=whales
 
 # Optional version of your custom miner package
-CUSTOM_VERSION=1.1.2
+CUSTOM_VERSION=1.1.3 # keep in sync with miner.py
 CUSTOM_BUILD=0
 
 # Full path to miner config file
-CUSTOM_CONFIG_FILENAME=/hive/miners/custom/${CUSTOM_NAME}/${CUSTOM_NAME}.conf
+CUSTOM_CONFIG_FILENAME=/hive/miners/custom/whales-miner-${CUSTOM_VERSION}/${CUSTOM_NAME}.conf
 
 # Full path to log file basename. WITHOUT EXTENSION (don't include .log at the end)
 # Used to truncate logs and rotate,
